storage/minio/gen-output/minio-headless.minio.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: minio
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio
    app.kubernetes.io/version: 2024.9.22
    helm.sh/chart: minio-14.7.13
  name: minio-headless
  namespace: minio
spec:
  clusterIP: None
  ports:
  - name: minio-api
    port: 9000
    targetPort: minio-api
  - name: minio-console
    port: 9001
    targetPort: minio-console
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
  type: ClusterIP
